See #5 signup enhance
Give all fields checking js

--- a/competitors/templates/registration/register.html
+++ b/competitors/templates/registration/register.html
@@ -25,20 +25,10 @@
     <div id="body">
         <div class="container" id="form-wrapper">
             <h2 class="col-sm-offset-2" id="form-head"> Welcome! </h2>
-            <form action="{% url 'register' %}" name="signup-form" class="form-horizontal" method="POST" autocomplete="off">
-                <input style="display:none">
-                <input type="password" style="display:none">
+            <form action="{% url 'register' %}" name="signup-form" class="form-horizontal" method="POST">
                 {% for field in form %}
-<!--                  <div class="form-group has-error has-feedback">
-                    <label class="control-label col-sm-3" for="inputSuccess3">Input with success</label>
-                    <div class="col-sm-9">
-                      <input type="text" class="form-control" id="inputSuccess3" aria-describedby="inputSuccess3Status">
-                      <span class="glyphicon glyphicon-remove-sign form-control-feedback" aria-hidden="true"></span>
-                      <span id="inputSuccess3Status" class="sr-only">(success)</span>
-                    </div>
-                  </div> -->
-                <div class="form-group has-feedback">
-                    <label for="inputFirstname" class="col-sm-2 control-label">{{field.label}}</label>
+                <div class="signupfield form-group has-feedback">
+                    <label class="col-sm-2 control-label">{{field.label}}</label>
                     <div class="col-sm-6">
                         {{field}}
                         <span class="glyphicon form-control-feedback" aria-hidden="true"></span>
@@ -46,7 +36,7 @@
                 </div>
                 {% endfor %}
             <div class="form-group">
-                <div class="radio col-sm-offset-2">
+                <div class="agreement radio col-sm-offset-2">
                     <label>
                         <input type="radio" name="optionsRadios" id="optionsRadios" value="agree">
                         I have read and agree with the <a href="javascript:;">Agreement</a>
@@ -55,7 +45,7 @@
             </div>
             <div id="form-action">
                 <div class="col-sm-2"></div>
-                <button type="submit" class="btn btn-warning">Register</button>
+                <button type="submit" disabled="true" class="btn btn-warning">Register</button>
             </div>
             {% csrf_token %}
         </form>
@@ -67,8 +57,7 @@
     competitorsApp.controller('MainCtl',['$scope','$http',function($scope,$http){
             console.log("123123");
             $scope.message = "SUCCESS";
-            var field;
-            var validation = function(offset, size, callback){
+            var validation = function(field){
                 console.log(field);
                 var data = $('input[name='+ field +']').val();
                 if (field == "username"){
@@ -92,7 +81,8 @@
                     }else{
                         incorrectSymbol(field,data)
                     }
-                })
+                });
+                signupAva();
             }
             var firstNameTimer;
             var lastNameTimer;
@@ -100,26 +90,64 @@
             var emailTimer;
             var password1Timer;
             var password2Timer;
-            $('form').attr("autocomplete","off");          
+            $('input[name=first_name]').on('input',function() {
+                clearTimeout(firstNameTimer);
+                var firstName = $('input[name=first_name]').val();
+                if (firstName){
+                    firstNameTimer = setTimeout((function(){
+                        if (/[^A-Za-z\d]/.test(firstName)) {
+                            incorrectSymbol("first_name","Please enter only letter and numeric characters");
+                        }else{
+                            correctSymbol("first_name")
+                        }
+                        signupAva();
+                    }),1000);
+                }else{
+                    incorrectSymbol("first_name","Required");
+                }
+            });
+
+            $('input[name=last_name]').on('input',function() {
+                clearTimeout(lastNameTimer);
+                var lastName = $('input[name=last_name]').val();
+                if (lastName){
+                    lastNameTimer = setTimeout((function(){
+                        if (/[^A-Za-z\d]/.test(lastName)) {
+                            incorrectSymbol("last_name","Please enter only letter and numeric characters");
+                        }else{
+                            correctSymbol("last_name")
+                        }
+                        signupAva();
+                    }),1000);
+                }else{
+                    incorrectSymbol("last_name","Required");
+                }
+            });
+
             $('input[name=username]').on('input',function() { 
                 clearTimeout(usernameTimer);
-                if ($('input[name=username]').val()){
-                    field = "username"
-                    usernameTimer = setTimeout(validation,2000);
-                } // get the current value of the input field.
+                if ($('input[name=username]').val().trim()){
+                    usernameTimer = setTimeout(function(){
+                        return validation("username");
+                    },2000);
+                }else{
+                    incorrectSymbol("username","Required");
+                }
             });
             $('input[name=email]').on('input',function() { 
                 clearTimeout(emailTimer);
-                if ($('input[name=email]').val()){
-                    field = "email"
-                    emailTimer = setTimeout(validation,2000);
-                } // get the current value of the input field.
+                if ($('input[name=email]').val().trim()){
+                    emailTimer = setTimeout(function(){
+                        return validation('email');
+                    },2000);
+                }else{
+                    incorrectSymbol("email","Required");
+                }
             });
 
             $('input[name=password1]').keyup(function() { 
                 clearTimeout(password1Timer);
-                field = "password1";
-                var p1 = $('input[name=password1]').val()
+                var p1 = $('input[name=password1]').val();
                 if (p1) {
                     password1Timer = setTimeout((function(){
                         if (p1.length < 6){
@@ -127,37 +155,60 @@
                         }else{
                             correctSymbol("password1")
                         }
-                    }),2000);
-                } // get the current value of the input field.
+                        signupAva();
+                    }),1000);
+                } else{
+                    incorrectSymbol("password1","Required");
+                }
             });
 
             $('input[name=password2]').keyup(function() { 
                 clearTimeout(password2Timer);
-                var p1 = $('input[name=password1]').val()
-                var p2 = $('input[name=password2]').val()
+                var p1 = $('input[name=password1]').val();
+                var p2 = $('input[name=password2]').val();
                 if (p2) {
                     password2Timer = setTimeout((function(){
-                        if (p2 != p1 ){
+                        if (p2 !== p1 ){
                             incorrectSymbol("password2","passwords not match");
                         }else{
                             correctSymbol("password2");
                         }
-                    }),2000);
-                } // get the current value of the input field.
+                        signupAva();
+                    }),1000);
+                }else{
+                    incorrectSymbol("password2","Required");
+                }
             });
 
             var incorrectSymbol = function(field,data){
-                $('input[name='+ field +']').parent().children('.glyphicon').addClass('glyphicon-remove-sign');
+                $('input[name='+ field +']').parent().children('.glyphicon').removeClass('glyphicon-ok-sign').addClass('glyphicon-remove-sign');
                 $('input[name='+ field +']').parent().parent().removeClass('has-success').addClass('has-error');
+                $('input[name='+ field +']').parent().parent().children(".error").remove();
                 $('input[name='+ field +']').parent().parent().append("<div class=\"col-sm-4 error\">"+data+"</div>")
             }
 
             var correctSymbol = function(field){
-                $('input[name='+ field +']').parent().children('.glyphicon').addClass('glyphicon-ok-sign');
+                $('input[name='+ field +']').parent().children('.glyphicon').removeClass('glyphicon-remove-sign').addClass('glyphicon-ok-sign');
                 $('input[name='+ field +']').parent().parent().removeClass('has-error').addClass('has-success');
                 $('input[name='+ field +']').parent().parent().children(".error").remove();               
             }
 
+            var signupAva = function(){
+                var disabled = false;
+                console.log("checking");
+                $(".signupfield").each(function(){
+                    if (!$(this).hasClass("has-success")){
+                        console.log("change-un")
+                        $('button[type=submit]').attr('disabled','disabled');
+                        disabled = true;
+                    }
+                });
+                
+                if (disabled==false){
+                    console.log("change-success")
+                    $('button[type=submit]').removeAttr('disabled');
+                }
+            }
         }
         
     ]);
