--- a/competitors/static/competitors/css/register.css
+++ b/competitors/static/competitors/css/register.css
@@ -22,7 +22,7 @@ input:-webkit-autofill, textarea:-webkit-autofill, select:-webkit-autofill {
 	z-index: -1;
 }
 
-.radio {
+.checkbox {
 	padding-left: 1em;
 }
 
