--- a/competitors/templates/competitors/index.html
+++ b/competitors/templates/competitors/index.html
@@ -54,11 +54,11 @@
 <body>
 	<input type="hidden" name="redirect" value="{% firstof request.path '/' %}">
 	<div id="fullpage">
-	
+
 	<!-- New Nav area -->
 		<div class="section" id="section0" data-anchor="firstPage">
 			{% include 'competitors/navbar.html' %}
-			{% csrf_token %} 
+			{% csrf_token %}
 			<div class="col-md-offset-3 col-md-6" id="search_bar">
 				<form role="search" method="POST" action="{% url 'search' %}">
 		    		<div class="input-group input-group-lg">
@@ -83,13 +83,13 @@
 						<a href="javascript:;">Washington Wizard vs Atlanta Hawks</a>
 						<span id="score">90:106</span>
 					</div>
-				</div>	
+				</div>
 			</div>
 			<div class="container"  id="body-wrapper2">
-				<div class="col-md-6 col-sm-12" id="player-wrapper">
+				<div class="col-md-6" id="player-wrapper">
 					<h4>Player<span class="pull-right"><a href="javascript:;">More</a></span></h4>
 					{% for player in players %}
-						<div class="col-sm-5 player-box player-left-column" id="player1">
+						<div class="col-md-5 player-box player-left-column  list-group" id="player1">
 							<a href="{% url 'player_page' player.id %}">
 								<div class="player-image" id="img1"><img src="{{player.icon_url}}"></div>
 								<p>{{player.name}} <span class="pull-right"> {{player.followers.count}} </span></p>
@@ -109,19 +109,19 @@
 							</a>
 						</div>
 					</div>
-					{% endfor %} 
+					{% endfor %}
 				</div>
 			</div>
 
 			{% include 'competitors/footer.html' %}
-			
+
 		</div>
 
-			
+
 	</div>
 </body>
 <script type="text/javascript" src="{{STATIC_URL}}competitors/js/index.js"></script>
 <script type="text/javascript" src="{{STATIC_URL}}competitors/js/loginajax.js"></script>
 <script type="text/javascript" src="{{STATIC_URL}}competitors/js/base.js"></script>
-<script type="text/javascript" src="{{STATIC_URL}}competitors/js/login.js"></script>	
+<script type="text/javascript" src="{{STATIC_URL}}competitors/js/login.js"></script>
 </html>
