index2 test push

--- a/competitors/templates/competitors/navbar.html
+++ b/competitors/templates/competitors/navbar.html
@@ -1,5 +1,5 @@
 <nav id="menu" class="navbar">
-  	<div class="container-fluid">
+  	<div id="test" class="container-fluid">
 	    <div class="navbar-header" id="logo-wrapper">
 
 	    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#sign">
