See #2 signup page responsive design Change the menu.css to satisfy the collapse

--- a/competitors/templates/competitors/navbar.html
+++ b/competitors/templates/competitors/navbar.html
@@ -1,13 +1,10 @@
-<nav id="menu" class="navbar">
+<nav id="menu" class="navbar navbar-static-top">
   	<div id="test" class="container-fluid">
 	    <div class="navbar-header" id="logo-wrapper">
-
-	    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#sign">
-	    	<span class="glyphicon glyphicon-align-justify" aria-hidden="true"></span>
-			</button>
-	      	</button>
 	      <a class="navbar-brand" href="#" id="logo"><img src="{{STATIC_URL}}competitors/img/logo1.png" alt="logo" width="150" height="25"></a>
-
+	      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#sign">
+	    		<span class="glyphicon glyphicon-align-justify" aria-hidden="true"></span>
+				</button>
 	    </div>
 	  <!--   <div>
 			<ul >
@@ -19,18 +16,30 @@
 
 	    <div class="collapse navbar-collapse" id="sign">
 		    	{% if user.is_authenticated %}
-
-			    	<a id="signnnnnnnnnnn" href="{% url 'django.contrib.auth.views.logout' %}?next={% firstof request.path %}"><button class="btn btn-danger">sign out</button></a>
-			    	<a id="redirect" href="{% url 'see_profile' user.username %}"><button class="btn btn-link btn-lg">{{ user.username }}</button></a>
+		    	<ul class="nav navbar-nav">
+		    	<li>
+			    	<a id="signnnnnnnnnnn" href="{% url 'django.contrib.auth.views.logout' %}?next={% firstof request.path %}" btn btn-danger>sign out></a>
+			    </li>
+			    <li>
+			    	<a id="redirect" href="{% url 'see_profile' user.username %}" class="btn btn-link btn-lg">{{ user.username }}></a>
+			    </li>
 				{% else %}
 					{% if homepage == True %}
-		    			<button type="button" class="btn btn-warning btn-sm"> Sign in </button>
-						<a href="{% url 'register' %}"><button type="button" class="btn btn-default btn-sm"> Sign up </button></a>
+					<li>
+		    			<a href="#" class="btn btn-warning btn-sm"> Sign in </a>
+		    	</li>
+
+		    	<li>
+						<a href="{% url 'register' %}" class="btn btn-default btn-sm"> Sign up </a>
+					</li>
 					{% endif %}
 					{% if signuppage == True %}
+					<li>
 						<a href="login" id="login"><small class="pull-right">Already have an account?</small></a>
+					<li>
 					{% endif %}
 				{% endif %}
+				</ul>
 
 	    </div>
   	</div>
