--- a/competitors/static/competitors/css/header.css
+++ b/competitors/static/competitors/css/header.css
@@ -1,6 +1,6 @@
 #logo-wrapper {
 	margin-top: 0.5em;
-	margin-left: 10%;	
+	margin-left: 10%;
 }
 
 #sign {
@@ -16,10 +16,9 @@
 }
 
 #menu{
-	position: absolute;
-	top: 1em;
+	position: relative;
+	top: -5em;
 	left:0;
-	height: 70px;
 	z-index: 70;
 	width: 100%;
 	padding: 0;
