--- a/competitors/static/competitors/css/base.css
+++ b/competitors/static/competitors/css/base.css
@@ -94,7 +94,7 @@ body{
 #login_header>h3{
 	display: inline;
 	margin-left:20px;
-	width: 155px; 
+	width: 155px;
 	height: 50px;
 	line-height: 50px;
 	vertical-align: middle;
@@ -130,7 +130,7 @@ body{
 
 #signin,#signup{
 	width: 145px;
-	margin-top:5px; 
+	margin-top:5px;
 }
 
 #main{
@@ -139,7 +139,7 @@ body{
 
 #forget{
 	width: 295px;
-	margin-top:5px; 
+	margin-top:5px;
 }*/
 
 
@@ -153,7 +153,7 @@ body{
 
 #logo-wrapper {
 	margin-top: 0.5em;
-	margin-left: 10%;	
+	margin-left: 10%;
 }
 
 #sign {
@@ -169,12 +169,10 @@ body{
 }
 
 #menu{
-	position: absolute;
+	position: relative;
 	top: 1em;
 	left:0;
-	height: 70px;
 	z-index: 70;
-	width: 100%;
 	padding: 0;
 	margin:0;
 	background: rgba(192,192,192, 0.3);
@@ -225,7 +223,7 @@ body{
 
 
 /*#team1 {
-	margin-top: 10px; 
+	margin-top: 10px;
 	padding-left: 20px;
 	width: 100px;
 	height: 90px;
