--- a/competitors/templates/competitors/index.html
+++ b/competitors/templates/competitors/index.html
@@ -31,7 +31,7 @@
 			$('#fullpage').fullpage({
 				sectionsColor: ['#A9A9A9', '#A9A9A9'],
 				anchors: ['firstPage', 'secondPage'],
-				css3: true,
+				css3: false,
 				scrollingSpeed: 600,
 				scrollOverflow: true
 			});
