--- a/competitors/templates/competitors/navbar.html
+++ b/competitors/templates/competitors/navbar.html
@@ -15,7 +15,7 @@
 		    	<a id="redirect" href="{% url 'see_profile' user.username %}"><button class="btn btn-link btn-lg">{{ user.username }}</button></a>
 			{% else %}
 				{% if homepage == True %} 
-	    			<button type="button" class="btn btn-warning btn-sm"> Sign in </button>
+	    			<button type="button" class="btn btn-warning btn-sm" data-toggle="modal" data-target="#loginbox"> Sign in </button>
 					<a href="{% url 'register' %}"><button type="button" class="btn btn-default btn-sm"> Sign up </button></a>
 				{% endif %}
 				{% if signuppage == True %}
@@ -23,5 +23,22 @@
 				{% endif %}
 			{% endif %}
 	    </div>
+	    <div class="modal fade" id="loginbox">
+		  <div class="modal-dialog">
+		    <div class="modal-content">
+		      <div class="modal-header">
+		        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+		        <h4 class="modal-title">Modal title</h4>
+		      </div>
+		      <div class="modal-body">
+		        <p>One fine body&hellip;</p>
+		      </div>
+		      <div class="modal-footer">
+		        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+		        <button type="button" class="btn btn-primary">Save changes</button>
+		      </div>
+		    </div><!-- /.modal-content -->
+		  </div><!-- /.modal-dialog -->
+		</div><!-- /.modal -->
   	</div>
 </nav>
