--- a/competitors/templates/competitors/index.html
+++ b/competitors/templates/competitors/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="competitorsApp">
 <head>
 	<title>Competitors</title>
 	<meta charset="UTF-8">
@@ -18,6 +18,7 @@
 	<!-- Latest compiled and minified JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.13/angular.min.js"></script>
+	<script src="{{STATIC_URL}}competitors/js/app.js"></script>   
 
 
 </head>
@@ -52,7 +53,7 @@
 			});
 		});
 	</script>
-<body>
+<body ng-controller="MainCtl">
 	<input type="hidden" name="redirect" value="{% firstof request.path '/' %}">
 	<div id="fullpage">
 	
