--- a/competitors/templates/registration/register.html
+++ b/competitors/templates/registration/register.html
@@ -25,16 +25,20 @@
     <div id="body">
         <div class="container" id="form-wrapper">
             <h2 class="col-sm-offset-2" id="form-head"> Welcome! </h2>
-            <form action="{% url 'register' %}" name="signup-form" class="form-horizontal" method="POST">
+            <form action="{% url 'register' %}" name="signupform" class="form-horizontal" method="POST">
                 {% for field in form %}
-                <div class="signupfield form-group has-feedback">
+                <div class="signupfield form-group has-feedback" ng-class="{'has-error':register_{{field.name}}_init && register_{{field.name}}_has_error,'has-success':register_{{field.name}}_init &&  !register_{{field.name}}_has_error}">
                     <label class="col-sm-2 control-label">{{field.label}}</label>
                     <div class="col-sm-6">
                         {{field}}
-                        <span class="glyphicon form-control-feedback" aria-hidden="true"></span>
+                        <span class="glyphicon form-control-feedback" ng-class="{'glyphicon-ok-sign':register_{{field.name}}_init &&  !register_{{field.name}}_has_error,'glyphicon-remove-sign':register_{{field.name}}_init && register_{{field.name}}_has_error}" aria-hidden="true"></span>
                     </div>
+                     <div class="col-sm-4 error" ng-show="register_{{field.name}}_init && register_{{field.name}}_has_error">
+                        //register_{{field.name}}_error//
+                     </div>
                 </div>
                 {% endfor %}
+                <!-- <input type="text" ng-model="usernamee" checkusernamee/> -->
             <div class="form-group">
                 <div class="agreement radio col-sm-offset-2">
                     <label>
@@ -45,247 +49,134 @@
             </div>
             <div id="form-action">
                 <div class="col-sm-2"></div>
-                <button type="submit" disabled="true" class="btn btn-warning">Register</button>
+                <button type="submit" ng-disabled="signupform.$invalid" class="btn btn-warning">Register</button>
             </div>
             {% csrf_token %}
-        </form>
+        </div>
     </div>
-</div>
 {% include 'competitors/footer.html' %}
 <script src="{{STATIC_URL}}competitors/js/register.js"></script>
 <script>
-    competitorsApp.controller('MainCtl',['$scope','$http',function($scope,$http){
-            console.log("123123");
-            $scope.message = "SUCCESS";
-            var validation = function(field){
-                console.log(field);
-                var data = $('input[name='+ field +']').val();
-                if (field == "username"){
-                    var para = $.param({username:data})
-                }else if (field == "email"){
-                    var para = $.param({email:data})
-                }else
-                    return;
-           // var token = $("input[name=csrfmiddlewaretoken]").val();
-             
-                $http({
-                    method: 'POST',
-                    url: "api/check"+field,
-                    data: para,
-                    headers: {'Content-Type': 'application/x-www-form-urlencoded'}
-                })
-                .success(function(data, status, headers, config){
-                    console.log(data);
-                    if (!data){
-                        correctSymbol(field);
-                    }else{
-                        incorrectSymbol(field,data)
+    // console.log(rendered);
+
+    competitorsApp.controller('MainCtl',['$scope','$http','$timeout',function($scope,$http,$timeout){
+
+            
+            {% for field in form %}
+                var {{field.name}}_timer;
+                var timer;
+                // console.log({{field.name}}_timer);
+                $scope.$watch('signupform.{{field.name}}.$viewValue', 
+                    function(newVal){
+                        $timeout.cancel({{field.name}}_timer);
+                        {{field.name}}_timer = $timeout(function(newVal) {
+                            var input = $scope.signupform.{{field.name}};
+                            if (newVal == undefined && $scope.register_{{field.name}}_init == undefined){
+                                $scope.register_{{field.name}}_init = false;
+                            }
+                            else if ($scope.register_{{field.name}}_init == false){
+                                $scope.register_{{field.name}}_init = true;
+                                // console.log("{{field.name}}")
+                            }
+                            $scope.register_{{field.name}}_has_error = input.$invalid;
+                            if (input.$invalid && $scope.register_{{field.name}}_init){
+                                if (input.$error.required){
+                                    $scope.register_{{field.name}}_error = "This field is required"; 
+                                }else if (input.$error.pattern){
+                                    $scope.register_{{field.name}}_error = "Can only contain letters and/or numbers"; 
+                                }else if (input.$error.minlength){
+                                    $scope.register_{{field.name}}_error = "At least " + $('form[name=signupform] input[name={{field.name}}]').attr('ng-minlength') + " letters"; 
+                                }else if (input.$error.maxlength){
+                                    $scope.register_{{field.name}}_error = "At least " + $('form[name=signupform] input[name={{field.name}}]').attr('ng-maxlength') + " letters";
+                                }else if (input.$error.email){
+                                    $scope.register_{{field.name}}_error = "Email format incorrect"; 
+                                }else if (input.$error.usernameTaken){
+                                    $scope.register_{{field.name}}_error = "Username has been registered"; 
+                                }else if (input.$error.emailTaken){
+                                    $scope.register_{{field.name}}_error = "Email has been registered"; 
+                                }else if (input.$error.pwNotMatch){
+                                    $scope.register_password2_error = "Not match/incorrect"; 
+                                }                                               
+                            }
+                            
+                        },500);
                     }
-                });
-                signupAva();
-            }
-            var firstNameTimer;
-            var lastNameTimer;
-            var usernameTimer;
-            var emailTimer;
-            var password1Timer;
-            var password2Timer;
-            $('input[name=first_name]').on('input',function() {
-                clearTimeout(firstNameTimer);
-                var firstName = $('input[name=first_name]').val();
-                if (firstName){
-                    firstNameTimer = setTimeout((function(){
-                        if (/[^A-Za-z\d]/.test(firstName)) {
-                            incorrectSymbol("first_name","Please enter only letter and numeric characters");
-                        }else{
-                            correctSymbol("first_name")
-                        }
-                        signupAva();
-                    }),1000);
-                }else{
-                    incorrectSymbol("first_name","Required");
-                }
-            });
-
-            $('input[name=last_name]').on('input',function() {
-                clearTimeout(lastNameTimer);
-                var lastName = $('input[name=last_name]').val();
-                if (lastName){
-                    lastNameTimer = setTimeout((function(){
-                        if (/[^A-Za-z\d]/.test(lastName)) {
-                            incorrectSymbol("last_name","Please enter only letter and numeric characters");
-                        }else{
-                            correctSymbol("last_name")
-                        }
-                        signupAva();
-                    }),1000);
-                }else{
-                    incorrectSymbol("last_name","Required");
-                }
-            });
-
-            $('input[name=username]').on('input',function() { 
-                clearTimeout(usernameTimer);
-                if ($('input[name=username]').val().trim()){
-                    usernameTimer = setTimeout(function(){
-                        return validation("username");
-                    },2000);
-                }else{
-                    incorrectSymbol("username","Required");
-                }
-            });
-            $('input[name=email]').on('input',function() { 
-                clearTimeout(emailTimer);
-                if ($('input[name=email]').val().trim()){
-                    emailTimer = setTimeout(function(){
-                        return validation('email');
-                    },2000);
-                }else{
-                    incorrectSymbol("email","Required");
-                }
-            });
-
-            $('input[name=password1]').keyup(function() { 
-                clearTimeout(password1Timer);
-                var p1 = $('input[name=password1]').val();
-                if (p1) {
-                    password1Timer = setTimeout((function(){
-                        if (p1.length < 6){
-                            incorrectSymbol("password1","password should > 6");
-                        }else{
-                            correctSymbol("password1")
-                        }
-                        signupAva();
-                    }),1000);
-                } else{
-                    incorrectSymbol("password1","Required");
-                }
-            });
-
-            $('input[name=password2]').keyup(function() { 
-                clearTimeout(password2Timer);
-                var p1 = $('input[name=password1]').val();
-                var p2 = $('input[name=password2]').val();
-                if (p2) {
-                    password2Timer = setTimeout((function(){
-                        if (p2 !== p1 ){
-                            incorrectSymbol("password2","passwords not match");
-                        }else{
-                            correctSymbol("password2");
-                        }
-                        signupAva();
-                    }),1000);
-                }else{
-                    incorrectSymbol("password2","Required");
-                }
-            });
-
-            var incorrectSymbol = function(field,data){
-                $('input[name='+ field +']').parent().children('.glyphicon').removeClass('glyphicon-ok-sign').addClass('glyphicon-remove-sign');
-                $('input[name='+ field +']').parent().parent().removeClass('has-success').addClass('has-error');
-                $('input[name='+ field +']').parent().parent().children(".error").remove();
-                $('input[name='+ field +']').parent().parent().append("<div class=\"col-sm-4 error\">"+data+"</div>")
-            }
-
-            var correctSymbol = function(field){
-                $('input[name='+ field +']').parent().children('.glyphicon').removeClass('glyphicon-remove-sign').addClass('glyphicon-ok-sign');
-                $('input[name='+ field +']').parent().parent().removeClass('has-error').addClass('has-success');
-                $('input[name='+ field +']').parent().parent().children(".error").remove();               
-            }
-
-            var signupAva = function(){
-                var disabled = false;
-                console.log("checking");
-                $(".signupfield").each(function(){
-                    if (!$(this).hasClass("has-success")){
-                        console.log("change-un")
-                        $('button[type=submit]').attr('disabled','disabled');
-                        disabled = true;
-                    }
-                });
-                
-                if (disabled==false){
-                    console.log("change-success")
-                    $('button[type=submit]').removeAttr('disabled');
-                }
-            }
+                );
+            {% endfor %}
         }
         
-    ]);
-    console.log("123123asdasd");
-    
+    ]).directive('checkusername', ['$q','$http',function($q,$http) {
+        return {
+            require: 'ngModel',
+            restrict: '',
+            link: function(scope, elm, attrs, ctrl, http) {
+                ctrl.$asyncValidators.usernameTaken = function(modelValue, viewValue) {
+                    var def = $q.defer();
+                    var valid;
+                    $http({
+                        method: 'POST',
+                        url: "api/checkusername",
+                        data: $.param({username:modelValue}),
+                        headers: {'Content-Type': 'application/x-www-form-urlencoded'}
+                    })
+                    .success(function(data, status, headers, config){
+                        if (data == ""){
+                            def.resolve();
+                        }else{
+                            def.reject();
+                        }
+                    }).error(function(data, status, headers, config){
+                            def.reject();
+                    });
+                    return def.promise;
+                };
+                
+            }
+        };
+    }]).directive('checkemail', ['$q','$http',function($q,$http) {
+        return {
+            require: 'ngModel',
+            restrict: '',
+            link: function(scope, elm, attrs, ctrl, http) {
+                ctrl.$asyncValidators.emailTaken = function(modelValue, viewValue) {
+                    var def = $q.defer();
+                    var valid;
+                    $http({
+                        method: 'POST',
+                        url: "api/checkemail",
+                        data: $.param({email:modelValue}),
+                        headers: {'Content-Type': 'application/x-www-form-urlencoded'}
+                    })
+                    .success(function(data, status, headers, config){
+                        if (data == ""){
+                            def.resolve();
+                        }else{
+                            def.reject();
+                        }
+                    }).error(function(data, status, headers, config){
+                            def.reject();
+                    });;
+                    return def.promise;
+                };
+                
+            }
+        };
+    }]).directive('pwMatch', function() {
+        return {
+            require: 'ngModel',
+            restrict: '',
+            link: function(scope, elm, attrs, ctrl, http) {
+                var checker = function() {
+                    var e1 = scope.$eval(attrs.ngModel); 
+                    var e2 = scope.$eval(attrs.pwMatch);
+                    var  match = (e1==e2)
+                    return e1 == e2;
+                };
+                scope.$watch(checker, function (n) {
+                    ctrl.$setValidity("pwNotMatch", n);
+                });
+                
+            }
+        };
+    });
 </script>
-
-
-
-
-<!-- <!DOCTYPE HTML>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}competitors/bootstrap-3.3.4/css/bootstrap-theme.min.css">
-        <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}competitors/bootstrap-3.3.4/css/bootstrap.css">
-        <link rel="stylesheet" type="text/css" href="{{ STATIC_URL}}competitors/css/register.css">
-        <title>Register</title>
-    </head>
-
-    <body>
-        <div id="container">
-        
-            <div id="navbar">
-                <div id="title">
-                    <a href="{% url 'home' %}"><h1 id="home">Welcome to Competitors</h1></a>
-                    <a href="login" id="login">Already Have an Account</a>
-                </div>
-            </div>
-            <div id="main">
-            
-                {% for error in errors %}
-                    <h4 style="color: red">
-                        {{ error }}
-                    </h4>
-                {% endfor %}
-                <div id="registerform">
-                    <form class="form-group" role="form" method="post" action="{% url 'register' %}">
-                        
-                        {% for field in form %}
-                            {% if field.errors %}
-                                <div class="form-group error">
-                                    <label class="control-label">{{ field.label }}</label> 
-                                    <div class="controls">{{ field }}
-                                        <span class="help-inline">
-                                            {% for error in  field.errors %}{{ error }}{% endfor %}
-                                        </span>
-                                    </div>
-                                </div>
-                            {% else %}
-                                <div class="form-group">
-                                <label class="control-label">{{ field.label }}</label> 
-                                    <div class="controls">{{ field }}
-                                        {% if field.help_text %}
-                                            <p class="help-inline"><small>{{ field.help_text }}</small></p>
-                                        {% endif %}
-                                    </div>
-                                </div>
-                            {% endif %}
-                        {% endfor %}
-                        <input type="checkbox" required> <span>I have read and agree with </span><a href="#">Agreement</a>
-                        {% csrf_token %}
-                        
-                                <button type="submit" class="btn btn-success">Register</button>
-                                
-                            
-                        
-                    </form>
-                    
-
-                </div>
-
-
-        </div>
-    </div>
-
-    </body>
-</html>
-
- -->
