--- a/competitors/static/competitors/css/index.css
+++ b/competitors/static/competitors/css/index.css
@@ -5,13 +5,13 @@
   background-size:100% 100%;
 }*/
 
-#section0 {
+#section0 img{
 /*  height: 1000px;*/
-  background-image: url("/static/competitors/img/index-2.jpg");
-  height: 600px;
-  -webkit-background-size: cover;
+/*  background-image: url("/static/competitors/img/index-2.jpg");
+  height: 600px;*/
+/*  -webkit-background-size: cover;
     background-size: cover;
-    background-position:center;
+    background-position:center;*/
 }
 
 #live-wrapper {
