--- a/competitors/templates/competitors/index.html
+++ b/competitors/templates/competitors/index.html
@@ -61,7 +61,49 @@
 		<div class="section" id="section0" data-anchor="firstPage">
 			{% include 'competitors/navbar.html' %}
 			{% csrf_token %}
-			<div class="col-md-offset-3 col-md-6" id="search_bar">
+
+			<div id="carousel-example-generic" class="carousel slide" data-ride="carousel" style="width:100%;height:100%;">
+			  <!-- Indicators -->
+			  	<ol class="carousel-indicators">
+				    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+				    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+				    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+			  	</ol>
+
+			  	<!-- Wrapper for slides -->
+			  	<div class="carousel-inner" role="listbox">
+			    	<div class="item active">
+				      	<img src="static/competitors/img/index-2.jpg" style="max-width: 100%;height: auto;" alt="...">
+				      	<div class="carousel-caption">
+				        	CL
+				    	</div>
+					</div>
+			    	<div class="item" style="background-image: url('/static/competitors/img/index-2.jpg');">
+				      	<!-- <img src="static/competitors/img/index-3.jpg" alt="..." style="max-width: 100%;height: auto;"> -->
+				      	<div class="carousel-caption">
+				        	Fake
+				    	</div>
+					</div>
+				</div>
+			    
+
+			  <!-- Controls -->
+			  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+			    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+			    <span class="sr-only">Previous</span>
+			  </a>
+			  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+			    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+			    <span class="sr-only">Next</span>
+			  </a>
+			</div>
+
+
+
+
+
+
+			<div class="col-md-offset-3 col-md-6" id="search_bar" style="position:absolute; top:50%;z-index:2">
 				<form role="search" method="POST" action="{% url 'search' %}">
 		    		<div class="input-group input-group-lg">
 		        		<span class="input-group-addon"><i class="glyphicon glyphicon-search"></i></span>
