see #12 carousel prototype added

--- a/competitors/templates/competitors/index.html
+++ b/competitors/templates/competitors/index.html
@@ -79,7 +79,7 @@
 				    	</div>
 					</div>
 			    	<div class="item" style="background-image: url('/static/competitors/img/index-2.jpg');">
-				      	<!-- <img src="static/competitors/img/index-3.jpg" alt="..." style="max-width: 100%;height: auto;"> -->
+				      	<img src="static/competitors/img/index-3.jpg" alt="..." style="height: 100%;">
 				      	<div class="carousel-caption">
 				        	Fake
 				    	</div>
