--- a/competitors/templates/competitors/index.html
+++ b/competitors/templates/competitors/index.html
@@ -4,7 +4,7 @@
 	<title>Competitors</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" type="text/css" href="{{STATIC_URL}}competitors/css/jquery.fullPage.css">
+	<!-- <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}competitors/css/jquery.fullPage.css"> -->
 	<link rel="stylesheet" type="text/css" href="{{STATIC_URL}}competitors/css/base.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
 	<!-- <link rel="stylesheet" href="{{STATIC_URL}}competitors/bootstrap-3.3.4/css/bootstrap.min.css"> -->
@@ -13,8 +13,7 @@
 	<script src="{{STATIC_URL}}competitors/js/jquery.min.js"></script>
 	<script src="{{STATIC_URL}}competitors/js/jquery.easings.min.js"></script>
 	<!-- This following line is only necessary in the case of using the plugin option `scrollOverflow:true` -->
-	<script type="text/javascript" src="{{STATIC_URL}}competitors/js/jquery.slimscroll.min.js"></script>
-	<script type="text/javascript" src="{{STATIC_URL}}competitors/js/jquery.fullPage.min.js"></script>
+
 	<!-- Latest compiled and minified JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.13/angular.min.js"></script>
@@ -27,33 +26,8 @@
 <link rel="stylesheet" href="http://code.jquery.com/ui/1.8.18/themes/base/jquery-ui.css" type="text/css" media="all">
 <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}competitors/css/index.css">
 <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
-	<script type="text/javascript">
-		$(document).ready(function() {
-			$('#fullpage').fullpage({
-				sectionsColor: ['#A9A9A9', '#A9A9A9'],
-				anchors: ['firstPage', 'secondPage'],
-				css3: false,
-				scrollingSpeed: 600,
-				scrollOverflow: true
-			});
 
-			// myvideo = $("video")[0];
-			// myvideo.muted = true;
-			// myvideo.play();
-
-			$('#mute').click(function(e) {
-				if (myvideo.muted === true) {
-					myvideo.muted = false;
-					$(this).text('Mute');
-				}
-				else {
-					myvideo.muted = true;
-					$(this).text('Unmute');
-				}
-			});
-		});
-	</script>
-<body ng-controller="MainCtl">
+<body ng-controller="MainCtl" style="background:grey;">
 	<input type="hidden" name="redirect" value="{% firstof request.path '/' %}">
 	<div id="fullpage">
 
@@ -62,7 +36,7 @@
 			{% include 'competitors/navbar.html' %}
 			{% csrf_token %}
 
-			<div id="carousel-example-generic" class="carousel slide" data-ride="carousel" style="width:100%;height:100%;">
+			<div id="carousel-example-generic" class="carousel slide" data-ride="carousel" style="width:100%;height:800px;">
 			  <!-- Indicators -->
 			  	<ol class="carousel-indicators">
 				    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
@@ -73,13 +47,13 @@
 			  	<!-- Wrapper for slides -->
 			  	<div class="carousel-inner" role="listbox">
 			    	<div class="item active">
-				      	<img src="static/competitors/img/index-2.jpg" style="max-width: 100%;height: auto;" alt="...">
+				      	<img src="static/competitors/img/index-2.jpg" style="width: 100%;height: 800px;" alt="...">
 				      	<div class="carousel-caption">
 				        	CL
 				    	</div>
 					</div>
 			    	<div class="item" style="background-image: url('/static/competitors/img/index-2.jpg');">
-				      	<img src="static/competitors/img/index-3.jpg" alt="..." style="height: 100%;">
+				      	<img src="static/competitors/img/index-3.jpg" alt="..." style="width:100%;height: 800px;">
 				      	<div class="carousel-caption">
 				        	Fake
 				    	</div>
@@ -89,11 +63,11 @@
 
 			  <!-- Controls -->
 			  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-			    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+			    <span class="sr-only glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
 			    <span class="sr-only">Previous</span>
 			  </a>
 			  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-			    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+			    <span class="sr-only glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
 			    <span class="sr-only">Next</span>
 			  </a>
 			</div>
@@ -117,7 +91,7 @@
 			</div>
 		</div>
 
-		<div class="section" id="section1" data-anchor="secondPage">
+		<div class="section" id="section1" data-anchor="secondPage" >
 			<div class="container-fluid" id="live-wrapper">
 				<div class="row">
 					<div class="col-md-4 col-sm-3 col-xs-2" id="live-text">
