--- a/competitors/templates/competitors/navbar.html
+++ b/competitors/templates/competitors/navbar.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" type="text/css" href="{{STATIC_URL}}competitors/css/header.css">
 <nav id="menu" class="navbar">
   	<div class="container-fluid">
 	    <div class="navbar-header" id="logo-wrapper">
