--- a/competitors/templates/competitors/index.html
+++ b/competitors/templates/competitors/index.html
@@ -10,55 +10,15 @@
 	<!-- <link rel="stylesheet" href="{{STATIC_URL}}competitors/bootstrap-3.3.4/css/bootstrap.min.css"> -->
 	<!-- Optional theme -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
-	<script src="{{STATIC_URL}}competitors/js/jquery.min.js"></script>
-	<script src="{{STATIC_URL}}competitors/js/jquery.easings.min.js"></script>
-	<!-- This following line is only necessary in the case of using the plugin option `scrollOverflow:true` -->
-	<script type="text/javascript" src="{{STATIC_URL}}competitors/js/jquery.slimscroll.min.js"></script>
-	<script type="text/javascript" src="{{STATIC_URL}}competitors/js/jquery.fullPage.min.js"></script>
-	<!-- Latest compiled and minified JavaScript -->
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.13/angular.min.js"></script>
-	<script src="{{STATIC_URL}}competitors/js/app.js"></script>   
-
-
+  <link rel="stylesheet" href="http://code.jquery.com/ui/1.8.18/themes/base/jquery-ui.css" type="text/css" media="all">
+  <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}competitors/css/index.css">
 </head>
 
-
-<link rel="stylesheet" href="http://code.jquery.com/ui/1.8.18/themes/base/jquery-ui.css" type="text/css" media="all">
-<link rel="stylesheet" type="text/css" href="{{STATIC_URL}}competitors/css/index.css">
-<script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
-	<script type="text/javascript">
-		$(document).ready(function() {
-			$('#fullpage').fullpage({
-				sectionsColor: ['#A9A9A9', '#A9A9A9'],
-				anchors: ['firstPage', 'secondPage'],
-				css3: false,
-				scrollingSpeed: 600,
-				scrollOverflow: true
-			});
-
-			// myvideo = $("video")[0];
-			// myvideo.muted = true;
-			// myvideo.play();
-
-			$('#mute').click(function(e) {
-				if (myvideo.muted === true) {
-					myvideo.muted = false;
-					$(this).text('Mute');
-				}
-				else {
-					myvideo.muted = true;
-					$(this).text('Unmute');
-				}
-			});
-		});
-	</script>
 <body ng-controller="MainCtl">
 	<input type="hidden" name="redirect" value="{% firstof request.path '/' %}">
 	<div id="fullpage">
-
 	<!-- New Nav area -->
-		<div class="section" id="section0" data-anchor="firstPage">
+		<div class="section" id="first-section" data-anchor="firstPage">
 			{% include 'competitors/navbar.html' %}
 			{% csrf_token %}
 			<div class="col-md-offset-3 col-md-6" id="search_bar">
@@ -75,23 +35,23 @@
 			</div>
 		</div>
 
-		<div class="section" id="section1" data-anchor="secondPage">
+		<div class="section" id="second-section" data-anchor="secondPage">
 			<div class="container-fluid" id="live-wrapper">
 				<div class="row">
 					<div class="col-md-4 col-sm-3 col-xs-2" id="live-text">
 						LIVE
 					</div>
-					<div class="col-md-8 col-sm-9 col-xs-10" id="match">
+					<div class="col-md-8 col-sm-9 col-xs-10" id="live-match">
 						<a href="javascript:;">Washington Wizard vs Atlanta Hawks</a>
-						<span id="score">90:106</span>
+						<span id="live-score">90:106</span>
 					</div>
 				</div>
 			</div>
-			<div class="container"  id="body-wrapper2">
+			<div class="container"  id="player-team-wrapper">
 				<div class="col-md-6 col-sm-12 col-xs-12" id="player-wrapper">
 					<h4>Player<span class="pull-right"><a href="javascript:;">More</a></span></h4>
 					{% for player in players %}
-						<div class="col-md-5 col-sm-5 self-col-xs-5 self-col-tn-5 player-box player-left-column" id="player1">
+						<div class="player-box player-left-column col-md-5 col-sm-5 col-xs-5 col-tn-5" id="player1">
 							<a href="{% url 'player_page' player.id %}">
 								<div class="player-image" id="img1"><img src="{{player.icon_url}}"></div>
 								<p>{{player.name}} <span class="pull-right"> {{player.followers.count}} </span></p>
@@ -119,11 +79,44 @@
 			{% include 'competitors/footer.html' %}
 
 		</div>
-
-
 	</div>
 </body>
+<script src="{{STATIC_URL}}competitors/js/jquery.min.js"></script>
+<script src="{{STATIC_URL}}competitors/js/jquery.easings.min.js"></script>
+<!-- This following line is only necessary in the case of using the plugin option `scrollOverflow:true` -->
+<script type="text/javascript" src="{{STATIC_URL}}competitors/js/jquery.slimscroll.min.js"></script>
+<script type="text/javascript" src="{{STATIC_URL}}competitors/js/jquery.fullPage.min.js"></script>
+<!-- Latest compiled and minified JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.13/angular.min.js"></script>
+<script src="{{STATIC_URL}}competitors/js/app.js"></script>
+<script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
 <script type="text/javascript" src="{{STATIC_URL}}competitors/js/index.js"></script>
 <script type="text/javascript" src="{{STATIC_URL}}competitors/js/login.js"></script>
 <script type="text/javascript" src="{{STATIC_URL}}competitors/js/base.js"></script>
+<script type="text/javascript">
+  $(document).ready(function() {
+    $('#fullpage').fullpage({
+      sectionsColor: ['#A9A9A9', '#A9A9A9'],
+      anchors: ['firstPage', 'secondPage'],
+      css3: false,
+      scrollingSpeed: 600,
+      scrollOverflow: true
+    });
+    // myvideo = $("video")[0];
+    // myvideo.muted = true;
+    // myvideo.play();
+
+    $('#mute').click(function(e) {
+      if (myvideo.muted === true) {
+        myvideo.muted = false;
+        $(this).text('Mute');
+      }
+      else {
+        myvideo.muted = true;
+        $(this).text('Unmute');
+      }
+    });
+  });
+</script>
 </html>
