--- a/competitors/templates/competitors/index.html
+++ b/competitors/templates/competitors/index.html
@@ -48,7 +48,7 @@
 				</div>
 			</div>
 			<div class="container"  id="player-team-wrapper">
-				<div class="col-md-6 player-wraper-border" id="player-wrapper">
+				<div class="col-md-6 player-wrapper-border" id="player-wrapper">
 					<h4>Player<span class="pull-right"><a href="javascript:;">More</a></span></h4>
 					{% for player in players %}
 						<div class="player-box player-left-column col-md-5 col-sm-5 self-col-xs-5" id="player1">
