--- a/competitors/static/competitors/css/person.css
+++ b/competitors/static/competitors/css/person.css
@@ -2,7 +2,11 @@ body {
 	background-color: #A9A9A9 !important;
 }
 
-#header-wrapper {
+#navbar-container{
+	background: #FF8C00 !important;
+}
+
+/*#header-wrapper {
 	height: 70px;
 	width: 100%;
 	padding: 0;
@@ -29,11 +33,11 @@ body {
 #header-search-bar {
 	margin-top: 20px;
 	margin-top: 20px;
-}
+}*/
 
-#logo-wrapper {
+/*#logo-wrapper {
 	margin-top: 0.5em;	
-}
+}*/
 
 .radio {
 	padding-left: 1em;
