--- a/competitors/static/competitors/css/register.css
+++ b/competitors/static/competitors/css/register.css
@@ -9,7 +9,7 @@ input:-webkit-autofill, textarea:-webkit-autofill, select:-webkit-autofill {
 	-webkit-box-shadow: 0 0 0 1000px white inset;
 }
 
-#menu{
+#navbar-container{
 	background: #FF8C00 !important;
 }
 
