--- a/competitors/templates/competitors/profile.html
+++ b/competitors/templates/competitors/profile.html
@@ -1,7 +1,28 @@
-{% extends "competitors/base.html" %}
-{% block main %}
+<!DOCTYPE html>
+<html lang="en" ng-app="competitorsApp">
+<head>
+    <title>Your Profile</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}competitors/css/base.css">
+    <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}competitors/css/person.css">
     <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}competitors/css/profile.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
+    <script src="{{STATIC_URL}}competitors/js/jquery.min.js"></script>
+    <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.13/angular.min.js"></script>
 
+</head>
+<body ng-controller="MainCtl">
+    <div id="header" style="margin-bottom:200px;">
+        {% include 'competitors/navbar.html' %}
+        {% csrf_token %}
+    </div>
+    </div>
+    
         {% for error in errors %}
         <h4 style="color: red">
             {{ error }}
@@ -100,5 +121,23 @@
             {% endfor %}
         </div>
         </div>
-    <script type="text/javascript" src="{{STATIC_URL}}competitors/js/profile.js"></script>
- {% endblock %}
+    {% include 'competitors/footer.html' %}
+</body>
+<script src="{{STATIC_URL}}competitors/js/app.js"></script>
+<script type="text/javascript" src="{{STATIC_URL}}competitors/js/profile.js"></script>
+<script type="text/javascript" src="{{STATIC_URL}}competitors/js/login.js"></script>
+<script type="text/javascript" src="{{STATIC_URL}}competitors/js/base.js"></script>
+<script type="text/javascript">
+    $('#tabs').click(function(e) {
+        $('#tabs .active').removeClass('active');
+        $(e.target).parents().addClass('active');
+    });
+
+    $("#tabs a").click(function (e) {
+        $(this).tab('show');
+    });
+
+    $('.glyphicon-pencil').click(function(e) {
+    });
+</script>
+</html>
