--- a/competitors/templates/registration/register.html
+++ b/competitors/templates/registration/register.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}competitors/css/register.css">
-    <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}competitors/css/header.css">
-    <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}competitors/css/footer.css">
+    <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}competitors/css/base.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
     <!-- Optional theme -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
